final check and test cases using console